[metadata]
name = flex-swarm
version = 0.1.1
author = Nick Yu<wiseyu@gmail.com>
description = A lightweight, stateless multi-agent orchestration framework. Forked from OpenAI''s swarm
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    openai>=1.33.0
    pydantic
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3

[options.extras_require]
dev =
    jinja
    numpy
    pytest
    requests
    tqdm
    pre-commit
    instructor

[options.packages.find]
exclude =
    codegen
    codegen.*
    tests
    tests.*
    logs
    logs.*
    examples
    examples.*
    devbox.*
    pyproject.toml
